plugins {
    id 'java'
    id 'application'
}

dependencies {
    implementation 'org.ow2.asm:asm:9.7'
    implementation 'org.ow2.asm:asm-commons:9.7'
    implementation 'org.ow2.asm:asm-tree:9.7'
    implementation 'org.ow2.asm:asm-util:9.7'
    // implementation 'com.jetbrains.intellij.java:java-decompiler-engine:241.15989.150'
    // implementation 'org.vineflower:vineflower:1.10.1'
    implementation 'org.openrs2:fernflower:1.1.1'
    implementation 'com.github.javaparser:javaparser-symbol-solver-core:3.26.0'
    implementation 'org.tomlj:tomlj:1.1.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

application {
    mainClass = "org.runewiki.deob.Deobfuscator"
}

jar {
    manifest {
        attributes(
            'Main-Class': 'org.runewiki.deob.Deobfuscator'
        )
    }

    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(JavaExec) {
    workingDir = project.rootDir
}
